# prebid-server-deployment-on-aws

./: CHANGELOG.md  README.md  azure-pipelines.yml  deploy.sh  destroy.sh  solution-manifest.yaml
source/: pyproject.toml  pytest.ini
source/infrastructure/: app.py  cdk.json
source/infrastructure/custom_resources/cloudwatch_metrics/: cloudwatch_metrics_report.py
source/infrastructure/prebid_server/: alb_entry_deployment.py  cloudfront_entry_deployment.py  ecs_service_construct.py  ecs_task_construct.py  prebid_glue_constructs.py  prebid_server_stack.py  rtb_fabric_construct.py  stack_cfn_parameters.py  stack_constants.py  vpc_peering_construct.py
source/loadtest/: README.md  openrtb2-banner-outstream-request.json  openrtb2-instream-video-request.json  openrtb2-video-endpoint-request.json  test-auction-amt.py
source/loadtest/bidder_simulator/: bidder_simulator_stack.py
source/loadtest/demo/: .gitignore  README.md  adUnits.js  app.js  index.html  package.json  webpack.config.js
source/loadtest/jmx/: README.md  prebid_server_test_plan.jmx  prebid_server_test_plan_using_amt_adapter.jmx
source/tests/functional_tests/: run-functional-tests.sh  test_prebid_auction.py
source/tests/unit_tests/: test_app.py  test_prebid_server_template.py
source/tests/unit_tests/bidder_simulator/: test_bidder_simulator_handler.py  test_bidder_simulator_stack.py
source/tests/unit_tests/custom_resources/: test_cloudwatch_metrics_report.py
source/tests/unit_tests/prebid_server/: test_rtb_fabric_construct.py  test_stack_cfn_parameters.py  test_vpc_peering_construct.py
(+21 files in other folders)
